--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,11 @@
 spring:
-  datasource:
-    url: jdbc:mysql://142.171.151.123:3306/tai?autoReconnect=true&useSSL=false
-    username: tai
-    password: 123456@T
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      minimum-idle: 3
-      maximum-pool-size: 5
-      max-lifetime: 0
+  profiles:
+    active: default
+  application:
+    name: my-common-util
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 
-server:
-  port: 51666
+logging:
+  config: classpath:logback-spring.xml
